kubernetes/apps/matrix/synapse/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix
spec:
  hostnames:
    - ${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: synapse-matrix-synapse
          port: 8008
      matches:
        - path:
            type: PathPrefix
            value: /_matrix
    - backendRefs:
        - kind: Service
          name: synapse-wellknown-lighttpd
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-subdomain
spec:
  hostnames:
    - matrix.${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: mas
          port: 8080
      matches:
        - path:
            type: RegularExpression
            value: ^/_matrix/client/(.*)/(login|logout|refresh)
    - backendRefs:
        - kind: Service
          name: synapse-matrix-synapse
          port: 8008
      matches:
        - path:
            type: PathPrefix
            value: /_matrix
        - path:
            type: PathPrefix
            value: /_synapse
